fix(stack): align visual representation with LIFO logic
- Updated toString to iterate from bottom to top (index 0 to N).
- Ensured the "top" (cima) is displayed at the right end of the list.
- Fixed misleading visual feedback that showed the bottom element as the top.